# genetic-algorithm-as-lab

./: README.md
grupa12/: CMakeLists.txt  README.md  package.xml
grupa12/include/grupa12/: grupa12.hpp  grupa12_node.hpp  visibility_control.hpp
grupa12/launch/: grupa12.launch.py
grupa12/src/: grupa12.cpp  grupa12_node.cpp
grupa12/test/: test_grupa12.cpp
grupa12_nnetwork/: CMakeLists.txt  README.md  package.xml
grupa12_nnetwork/include/grupa12_nnetwork/: grupa12_nnetwork.hpp  grupa12_nnetwork_node.hpp  visibility_control.hpp
grupa12_nnetwork/launch/: grupa12_nnetwork.launch.py
grupa12_nnetwork/src/: grupa12_nnetwork.cpp  grupa12_nnetwork_node.cpp
grupa12_nnetwork/test/: test_grupa12_nnetwork.cpp
